.gitignore should now be working

--- a/rulers.tex
+++ b/rulers.tex
@@ -1,5 +1,5 @@
 %%%% File: rulers.tex
-%%%% Provides 14-m worth of 1-m rulers at centimeter scaled, all numbered and
+%%%% Provides 14-m worth of 1-m rulers at centimeter scale, all numbered, and
 %%%% three 30-cm rulers, also numbered at every centimeter. 
 %%%% Author: Ricardo Hernández, with much help from Qrrbrbirlbel
 %%%% (http://tex.stackexchange.com/users/16595/qrrbrbirlbel) and the kind people
